<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_GetBO4Statuses" Id="{60b553c3-526b-0a19-06a2-c9503b4d6511}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_GetBO4Statuses : ST_TransportTubeStatuses
VAR_INPUT
END_VAR
VAR
	stStatus : ST_TransportTubeStatuses := (
		bIonPumpOn := GVL_BTS_VAC.fb_BO4_PIP.q_xHVEna_DO,
		bGateValveOpen := GVL_BTS_VAC.fb_BO4_VGC.M_IsOpen(),
		fPiraniGaugeVal := GVL_BTS_VAC.fb_BO4_GPI.PG.rPRESS,
		ePiraniGaugeState := GVL_BTS_VAC.fb_BO4_GPI.PG.eState,
		fColdCathodeVal := GVL_BTS_VAC.fb_BO4_GCC.IG.rPRESS,
		eColdCathodeState := GVL_BTS_VAC.fb_BO4_GCC.IG.eState);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_GetBO4Statuses := stStatus;]]></ST>
    </Implementation>
    <LineIds Name="F_GetBO4Statuses">
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>